# amir

./: frames_2026-04-09_14.48.07.gv
amr_bringup/: package.xml  setup.py
amr_bringup/Culik/: amir_starter.launch.py  navigation.launch.py  setup.py  web_node.py
amr_bringup/config/: amcl.yaml  ekf.yaml  mapper_params_online_async.yaml  nav2_params.yaml
amr_bringup/launch/: amir_starter.launch.py  localization.launch.py  mapping.launch.py  nav_core.launch.py  navigation.launch.py  robot.launch.py  slam_mapping.launch.py
amr_bringup/maps/: 21apr.pgm  21apr.yaml  22apr.pgm  22apr.yaml  23apr.pgm  23apr.yaml  23apr2.pgm  23apr2.yaml  24apr.pgm  Maps14April_v2.pgm  Maps14April_v2.yaml  cl_6mei.yaml  map13April.pgm  map13April.yaml  map17apr.pgm  map17apr.yaml  maps13April_v2.pgm  maps13April_v2.yaml  maps13April_v3.pgm  maps13April_v3.yaml  maps14April.pgm  maps14April.yaml  maps16April.pgm  maps16April.yaml  maps_bpro17apr.pgm  maps_bpro17apr.yaml  my_map.pgm  my_map.yaml
amr_bringup/rviz/: localization_baselink.rviz
amr_bringup/udev/: 99-arya-amr-serial.rules
amr_bringup_headless/: package.xml
amr_bringup_headless/amr_bringup_headless/: setup.cfg  setup.py
amr_bringup_headless/amr_bringup_headless/behavior_trees/: navigate_through_poses_no_spin.xml  navigate_to_pose_no_spin.xml
amr_bringup_headless/amr_bringup_headless/config/: ekf.yaml  (+3 more)
amr_bringup_headless/behavior_trees/: navigate_through_poses_no_spin.xml  navigate_to_pose_no_spin.xml
amr_bringup_headless/config/: nav2_params.yaml
amr_bringup_headless/launch/: mapping.launch.py  navigation.launch.py
amr_bringup_headless/maps/: 5mei.pgm  7mei.yaml  KPP11MEI.yaml  KPP11MEI_keepout.yaml  KPP11MEI_nav.json  SetengahKpp.pgm  cl_6mei.pgm  cl_6mei_keepout.pgm  cl_6mei_keepout.yaml  cl_6mei_nav.json  empty_keepout.yaml  new_kpp_solder_edited.yaml  solder2kpp_purrfect.yaml  solder2kpp_purrfect_keepout.pgm  solder2kpp_purrfect_nav.json
arya_motor_driver/: package.xml  setup.cfg  setup.py
arya_motor_driver/arya_motor_driver/: motor_node.py  odom_bridge.py  zlac_driver.py
arya_motor_driver/config/: motor_params.yaml  twist_mux.yaml
arya_motor_driver/launch/: motor_driver.launch.py  odom_bridge.launch.py  static_tf.launch.py
arya_web_interface/: READY_FOR_LAUNCH.md  REFACTORING.md  WCAG_COMPLIANCE.md  package.xml  setup.cfg  setup.py  validate_robotics.py
arya_web_interface/arya_web_interface/: web_node.py  web_node.py.backup  web_node_integrated.py
arya_web_interface/launch/: web_interface.launch.py
arya_web_interface/test/: test_frontend.js  test_launch_manager_features.py  test_navigation_web_features.py  test_utils.py
sensor_tf_fusion/: CMakeLists.txt  package.xml
sensor_tf_fusion/config/: ekf.yaml
sensor_tf_fusion/sensor_tf_fusion/: robot_bridge.py
waveshare_modbus_io/: package.xml  setup.cfg  setup.py
waveshare_modbus_io/config/: io_params.yaml
waveshare_modbus_io/launch/: io.launch.py
waveshare_modbus_io/waveshare_modbus_io/: __init__.py  io_node.py  modbus_client.py
waveshare_modbus_io_interfaces/: CMakeLists.txt  package.xml
waveshare_modbus_io_interfaces/srv/: SetMask.srv  SetSingle.srv
(+48 files in other folders)
