<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waveshare_modbus_io</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rodik@todo.todo">rodik</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-pymodbus</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>waveshare_modbus_io_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
