<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waveshare_modbus_io_interfaces</name>
  <version>0.1.0</version>
  <description>Service interfaces (.srv) for Waveshare Modbus RTU IO 8CH</description>

  <maintainer email="you@example.com">rodik</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Generate interfaces (CMake macro rosidl_generate_interfaces) -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Runtime deps for consumers (Python/C++) -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Required for packages that install msg/srv/action -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- (Optional) test deps -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
